Split class file and test file.

--- a/SerialFSE1001/SerialCommunicationCsharp.csproj
+++ b/SerialFSE1001/SerialCommunicationCsharp.csproj
@@ -40,8 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SerialCommunication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerialFSE1001.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
